--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
       integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous"
     >
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
